# Sinan

./: .gitignore  CLAUDE.md  Sinan-PRD.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: development-guide.md  ui-design-system.md
docs/plans/: 2026-01-28-sinan-mvp-progress.md  2026-01-28-sinan-mvp.md
electron/: main.ts  pythonManager.ts
sinan-core/: download_and_convert_maiui.py  main.py  pyproject.toml  test_buy_strawberry.py  test_harmony_meituan.py  test_meituan_harmony.py  test_mlx.py  test_model_comparison.py
sinan-core/src/sinan_core/agents/: executor.py  runner.py  ui_parser.py
sinan-core/src/sinan_core/api/: device_monitor.py  main.py  websocket.py
sinan-core/src/sinan_core/api/routes/: cases.py  devices.py
sinan-core/src/sinan_core/drivers/: android.py  base.py  harmony.py  manager.py
sinan-core/src/sinan_core/models/: case.py
sinan-core/src/sinan_core/storage/: case_store.py
sinan-core/src/sinan_core/vision/: __init__.py  agent.py  mlx_backend.py  transformers_backend.py  vllm_backend.py
sinan-core/tests/: test_api.py  test_case_model.py  test_device_manager.py  test_drivers_android.py  test_drivers_base.py  test_drivers_harmony.py  test_executor.py  test_runner.py  test_ui_parser.py  test_websocket.py
src/: App.css  App.tsx  index.css  main.tsx
src/components/ChatPanel/: InputBox.tsx  MessageList.tsx  index.tsx
src/components/DeviceSelector/: index.tsx
src/components/FlowCanvas/: index.tsx
src/components/ScreenshotNode/: index.tsx
src/components/sinan-ui/assistant/: AssistantPanel.tsx  ChatBubble.tsx  Composer.tsx  ExecutionPlan.tsx  PlanStep.tsx
src/components/sinan-ui/canvas/: CanvasArea.tsx  DashedEdge.tsx  DeviceCard.tsx  DeviceNodeCard.tsx  FlowCanvas.tsx  FlowConnector.tsx  (+3 more)
src/components/ui/: Button.tsx  Checkbox.tsx  Dialog.tsx  Dropdown.tsx  Input.tsx  Select.tsx  Switch.tsx  Tabs.tsx  Textarea.tsx  Tooltip.tsx  index.ts
src/hooks/: useDeviceMonitor.ts  useWebSocket.ts
src/services/: api.ts
src/stores/: caseStore.ts  deviceStore.ts
src/styles/: base-ui.css
(+3 files in other folders)
